# valydar.com

./: CNAME  api-reference.html  dpa.html  env.js  index.html  netlify.toml  privacy.html  terms.html
sdk/: README.md  demo.html  document-capture.js  idv-widget.js  package.json  selfie-capture.js  valydar.d.ts  valydar.js
sdk/android/valydar/: build.gradle.kts
sdk/android/valydar/src/main/java/com/valydar/: DocumentCaptureScreen.kt  Models.kt  ValydarClient.kt
sdk/csharp/: README.md
sdk/csharp/Valydar/: Models.cs  Valydar.csproj  ValydarClient.cs
sdk/flutter/: README.md  pubspec.yaml
sdk/flutter/lib/: document_capture.dart  selfie_capture.dart  valydar.dart  valydar_client.dart
sdk/ios/: Package.swift
sdk/ios/Sources/Valydar/: DocumentCaptureView.swift  Models.swift  ValydarClient.swift
sdk/java/: pom.xml
sdk/java/valydar/src/main/java/com/valydar/: Models.java  ValydarClient.java
sdk/python/: README.md  pyproject.toml
sdk/python/src/valydar/: __init__.py  client.py  types.py
sdk/react-native/: README.md  package.json  tsconfig.json
sdk/react-native/src/: DocumentCapture.tsx  SelfieCapture.tsx  ValydarClient.ts  index.ts  types.ts
