[project]
name = "valydar"
version = "0.1.0"
description = "Valydar Identity Verification API client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
